--- a/style.css
+++ b/style.css
@@ -126,6 +126,7 @@ h1 span {
 
 h2 {
 	font-size: 18px;
+	font-weight: 400;
 	color: var(--primary-white);
 }
 
@@ -302,6 +303,7 @@ h2 {
 	.time-summary {
 		flex-direction: column;
 		align-items: start;
+		gap: 8px;
 	}
 
 	.activity {
@@ -311,7 +313,7 @@ h2 {
 
 	.activity-list {
 		height: 199px;
-		padding: 29px 35px 32px 30px;
+		padding: 29px 30px 32px 30px;
 		gap: 24px;
 	}
 
@@ -325,5 +327,10 @@ h2 {
 
 	.icon-container {
 		height: 45px;
+	}
+
+	.user-details > img {
+		max-width: 78px;
+		height: 78px;
 	}
 }
